# machine-learning-suite

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml  pytest.yaml
shared/utils/: __init__.py  clickhouse.py  date.py  db_ops.py  etl_ops.py  log.py  storage_ops.py  transform_ops.py  validators.py
smart_bidding/: README.md
smart_bidding/etl/: dictionary.py  processor.py  run_etl.py  transform.py
smart_bidding/etl/collections/: content_categories.json  devices.json  product_categories.json
smart_bidding/etl/sql/: extract_events.sql
test/utils/: test_clickhouse.py  test_date.py  test_db_ops.py  test_validators.py
